--- a/index.html
+++ b/index.html
@@ -66,27 +66,14 @@
       transform: translateY(-10px);
       box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
     }
-    .profile-image {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin: 0 auto 15px;
-      border: 5px solid #9d4edd;
-    }
     .profile-name {
       color: #9d4edd;
-      font-size: 1.5em;
+      font-size: 1.8em;
       margin: 10px 0;
     }
     .profile-message {
       text-align: left;
       font-size: 0.95em;
-    }
-    .quote {
-      font-style: italic;
-      color: #5a189a;
-      margin: 15px 0;
     }
     footer {
       margin-top: 50px;
@@ -142,46 +129,39 @@
     </div>
 
     <div class="profile-section">
-      <!-- Perfil de Vicky -->
+      <!-- Vicky -->
       <div class="profile-card">
-        <img src="/api/placeholder/150/150" alt="Vicky" class="profile-image">
         <h2 class="profile-name">Vicky</h2>
         <div class="profile-message">
-          <p>Tu dedicación y creatividad nos inspiran cada día. Tu capacidad para encontrar soluciones y tu entusiasmo contagioso hacen de ti una compañera excepcional.</p>
-          <p class="quote">"Las mujeres que luchan son mujeres sin miedo"</p>
+          <!-- <p>Tu dedicación y creatividad nos inspiran cada día. Tu capacidad para encontrar soluciones y tu entusiasmo contagioso hacen de ti una compañera excepcional.</p> -->
         </div>
       </div>
 
-      <!-- Perfil de Lulu -->
+      <!-- Lulu -->
       <div class="profile-card">
-        <img src="/api/placeholder/150/150" alt="Lulu" class="profile-image">
         <h2 class="profile-name">Lulu</h2>
         <div class="profile-message">
-          <p>Tu alegría y empatía transforman nuestro ambiente laboral. Tu compromiso y la pasión que pones en cada proyecto son un ejemplo para todos nosotros.</p>
-          <p class="quote">"Una mujer con determinación tiene el poder de cambiar el mundo"</p>
+          <!-- <p>Tu alegría y empatía transforman nuestro ambiente laboral. Tu compromiso y la pasión que pones en cada proyecto son un ejemplo para todos nosotros.</p> -->
         </div>
       </div>
 
-      <!-- Perfil de Karla -->
+      <!-- Karla -->
       <div class="profile-card">
-        <img src="/api/placeholder/150/150" alt="Karla" class="profile-image">
         <h2 class="profile-name">Karla</h2>
         <div class="profile-message">
-          <p>Tu inteligencia y liderazgo natural nos guían hacia la excelencia. Tu fortaleza ante los desafíos y tu capacidad de innovación son cualidades que admiramos profundamente.</p>
-          <p class="quote">"El futuro es femenino"</p>
+          <!-- <p>Tu inteligencia y liderazgo natural nos guían hacia la excelencia. Tu fortaleza ante los desafíos y tu capacidad de innovación son cualidades que admiramos profundamente.</p> -->
         </div>
       </div>
     </div>
 
     <div class="banner">
-      <p>Gracias por formar parte de nuestro equipo y por todo lo que aportan día a día con su talento y dedicación.</p>
-      <p>Que este día sea un recordatorio del valor y la importancia de su presencia en nuestras vidas.</p>
+      <p>Muchas gracias por todo el apoyo que nos dan en el dia a dia al igual que las enseñanzas y la paciencia.</p>
     </div>
 
     <footer>
       <p><span class="flower">🌷</span> Celebrando la grandeza de ser mujer <span class="flower">🌷</span></p>
       <p>Con admiración y cariño <span class="heart">❤</span></p>
-      <div class="signature">Tu Equipo</div>
+      <div class="signature">El chamaco ✌️</div>
     </footer>
   </div>
 </body>
