--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
   <div class="container">
     <header>
       <h1 class="floating">✨ Feliz Día de la Mujer ✨</h1>
-      <div class="subtitle">Para tres mujeres extraordinarias</div>
-      <p class="special-message">Hoy y todos los días, celebramos su fuerza, su talento y su luz</p>
+      <div class="subtitle">Para las meras meras de TICS</div>
+      <p class="special-message">Hoy y todos los días, celebramos su fuerza, su talento y dedicacion</p>
     </header>
 
     <div class="banner">
-      <p>En este día especial, queremos celebrar no solo la historia de lucha por los derechos de las mujeres, sino también reconocer a las increíbles mujeres que cada día hacen de nuestro equipo un lugar mejor con su esfuerzo, creatividad y dedicación.</p>
+      <p>Hoy no solo es otro día en el calendario, sino la oportunidad perfecta para decirles que nuestro equipo no sería lo mismo sin ustedes. Su vibra, energía y todo lo que aportan cada día hace que hasta los dias en el trabajo sean mas divertidos.😊</p>
     </div>
 
     <div class="profile-section">
