--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
       transform: translateY(-10px);
       box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
     }
+    .mini-portrait {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin: 0 auto 15px;
+      border: 3px solid #9d4edd;
+      background-color: #f8edeb;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2em;
+      color: #9d4edd;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
     .profile-name {
       color: #9d4edd;
       font-size: 1.8em;
@@ -131,6 +146,9 @@
     <div class="profile-section">
       <!-- Vicky -->
       <div class="profile-card">
+        <div class="mini-portrait">
+          <img src="/api/placeholder/100/100" alt="Vicky" width="100" height="100" style="border-radius: 50%;">
+        </div>
         <h2 class="profile-name">Vicky</h2>
         <div class="profile-message">
           <!-- <p>Tu dedicación y creatividad nos inspiran cada día. Tu capacidad para encontrar soluciones y tu entusiasmo contagioso hacen de ti una compañera excepcional.</p> -->
@@ -139,6 +157,9 @@
 
       <!-- Lulu -->
       <div class="profile-card">
+        <div class="mini-portrait">
+          <img src="/api/placeholder/100/100" alt="Lulu" width="100" height="100" style="border-radius: 50%;">
+        </div>
         <h2 class="profile-name">Lulu</h2>
         <div class="profile-message">
           <!-- <p>Tu alegría y empatía transforman nuestro ambiente laboral. Tu compromiso y la pasión que pones en cada proyecto son un ejemplo para todos nosotros.</p> -->
@@ -147,6 +168,9 @@
 
       <!-- Karla -->
       <div class="profile-card">
+        <div class="mini-portrait">
+          <img src="/api/placeholder/100/100" alt="Karla" width="100" height="100" style="border-radius: 50%;">
+        </div>
         <h2 class="profile-name">Karla</h2>
         <div class="profile-message">
           <!-- <p>Tu inteligencia y liderazgo natural nos guían hacia la excelencia. Tu fortaleza ante los desafíos y tu capacidad de innovación son cualidades que admiramos profundamente.</p> -->
