--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <!-- Karla -->
       <div class="profile-card">
         <div class="mini-portrait">
-          <img src="img/karla.jpg" alt="Karla" width="100" height="100">
+          <img src="img/karla.png" alt="Karla" width="100" height="100">
         </div>
         <h2 class="profile-name">Karla</h2>
         <div class="profile-message">
