--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     .mini-portrait {
       width: 100px;
       height: 100px;
-      border-radius: 50%;
+      border-radius: 10px;
       object-fit: cover;
       margin: 0 auto 15px;
       border: 3px solid #9d4edd;
@@ -80,6 +80,7 @@
       font-size: 2em;
       color: #9d4edd;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
     }
     .profile-name {
       color: #9d4edd;
@@ -147,7 +148,7 @@
       <!-- Vicky -->
       <div class="profile-card">
         <div class="mini-portrait">
-          <img src="/api/placeholder/100/100" alt="Vicky" width="100" height="100" style="border-radius: 50%;">
+          <img src="img/vicky.jpg" alt="Vicky" width="100" height="100">
         </div>
         <h2 class="profile-name">Vicky</h2>
         <div class="profile-message">
@@ -158,7 +159,7 @@
       <!-- Lulu -->
       <div class="profile-card">
         <div class="mini-portrait">
-          <img src="/api/placeholder/100/100" alt="Lulu" width="100" height="100" style="border-radius: 50%;">
+          <img src="img/lulu.jpg" alt="Lulu" width="100" height="100">
         </div>
         <h2 class="profile-name">Lulu</h2>
         <div class="profile-message">
@@ -169,7 +170,7 @@
       <!-- Karla -->
       <div class="profile-card">
         <div class="mini-portrait">
-          <img src="img/karla.png" alt="Karla" width="100" height="100">
+          <img src="img/karla.jpg" alt="Karla" width="100" height="100">
         </div>
         <h2 class="profile-name">Karla</h2>
         <div class="profile-message">
