--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <!-- Vicky -->
       <div class="profile-card">
         <div class="mini-portrait">
-          <img src="img/vicky.jpg" alt="Vicky" width="100" height="100">
+          <img src="img/vicky.png" alt="Vicky" width="100" height="100">
         </div>
         <h2 class="profile-name">Vicky</h2>
         <div class="profile-message">
@@ -159,7 +159,7 @@
       <!-- Lulu -->
       <div class="profile-card">
         <div class="mini-portrait">
-          <img src="img/lulu.jpg" alt="Lulu" width="100" height="100">
+          <img src="img/lulu.png" alt="Lulu" width="100" height="100">
         </div>
         <h2 class="profile-name">Lulu</h2>
         <div class="profile-message">
@@ -170,7 +170,7 @@
       <!-- Karla -->
       <div class="profile-card">
         <div class="mini-portrait">
-          <img src="img/karla.jpg" alt="Karla" width="100" height="100">
+          <img src="img/karla.png" alt="Karla" width="100" height="100">
         </div>
         <h2 class="profile-name">Karla</h2>
         <div class="profile-message">
